<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/play_input_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/bg_bottom"
        android:orientation="vertical"
        android:padding="20dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_arrow_left" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/language_box_bg"
                    android:text="@string/language_english"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_normal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_arrow_right" />
            </LinearLayout>
        </RelativeLayout>

        <View style="@style/optisons_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_music"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />
            <RelativeLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                ></RelativeLayout>
        </RelativeLayout>

        <View style="@style/optisons_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_sounds"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

        <include layout="@layout/play_layout_play_multiplay" />
    </LinearLayout>

    <include layout="@layout/play_layout_three_bt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/logo" />

</RelativeLayout>